# RAI

./: CMakeLists.txt  RAI.cpp  RAI.h  RAICMake.cpp  RAICMake.h  constants.h  vcpkg.json  vectorSegment.h
include/: BVHNode.h  armController.h  bezierSegment.h  canvasController.h  e42motor.h  hardwareContainer.h  m57motor.h  n17motor.h  path.h  penActuator.h  point.h  segment.h  segmentContainer.h  timingUtility.h  vectorSegment.h
src/: BVHNode.cpp  hardwareContainer.cpp  segmentContainer.cpp  vectorSegment.cpp
